<resources>
    <string name="app_name">Ecolocation</string>
    <string name="google_maps_api_key">AIzaSyCXjh2-6Fuamh7jnjKLbn-Y_shjpqHzX7w</string>

    <!--Home Screen Strings-->
    <string name="home_title">Ecolocation</string>
    <string name="home_bttn_run">Run</string>
    <string name="home_bttn_about">About</string>

    <!--Detail Fragment Strings-->
    <string name="animal_name">Species\' Name</string>
    <string name="description">Description</string>
    <string name="wikipedia_link">Wikipedia Link</string>
    <string name="scientific_name">Scientific Name: </string>
    <string name="mass_title">Mass: </string>
    <string name="pop_title">Population: </string>
    <string name="end_lev_title">Endangered Level: </string>
    <string name="diet_title">Diet: </string>
    <string name="range_map">Range Map</string>

    <!--List View Screen Strings  -->
    <string name="listview_bttn_next">View Ecosystem Services</string>

    <!--Location Screen Strings-->
    <string name="loc_next_bttn">Next</string>
    <string name="txt_lat">(Latitude,</string>
    <string name="txt_long">Longitude)</string>

    <!--Graph Results Strings-->
    <string name="barchart_title">Nutrient Movement of Ecosystem</string>
    <string name="what_if">What-If Scenarios</string>

    <!--Spatial Mapping Fragment-->
    <string name="spatial_title">Nutrient Dispersal Potential Spatial Map</string>
    <string name="spatial_low">Lower Values</string>
    <string name="spatial_high">Higher Values</string>

    <!--Spatial Mapping Fragment-->
    <string-array name= "endangered_level_array">
        <item>Least Concern</item>
        <item>Near Threatened</item>
        <item>Vulnerable</item>
        <item>Endangered</item>
        <item>Critically Endangered</item>
    </string-array>


    <!--About Activity Strings-->
    <string name="about_title">About Ecolocation</string>
    <string name="about_background">A plentiful supply of nutrients is vital for life to flourish on
        land and in the ocean. It is now recognised that animals disperse many of these nutrients
        across their landscapes, simply by eating and moving. Large animals in particular are
        important to this process as they often travel great distances, bringing essential minerals
        such as nitrogen and phosphorous to distant habitats as they pass through. \n

        Until recently Earth was home to an abundance of large animals. In this app, you can
        discover more about these fascinating creatures and learn about the vital role they played
        in keeping their environments fertile and healthy. Choose any location across the world’s
        continents to find a list of all living and extinct mammals and explore how their presence
        or absence impacts total animal nutrient distribution using interactive graphs. You can also
        create your own “what if” scenarios to forecast how nutrient distribution may change in the
        future.
    </string>

    <string name="credit_title">Credits</string>

    <string name="doughty_title">Dr. Chris Doughty</string>
    <string name="doughty_credit">Doughty CE, Wolf A, Malhi Y (2013) The legacy of the pleistocene
        megafauna extinctions on nutrient availability in Amazonia. Nat Geosci 6(9):761–764.
    </string>
    <string name="doughty_credit2">Wolf A, Doughty CE, Malhi Y (2013) Lateral diffusion of
        nutrients by mammalian herbivores in terrestrial ecosystems. PLoS One 8(8):e71352.</string>

    <string name="historic_title">Pleistocene Era Data</string>
    <string name="historic_credit">Faurby S, Svenning JC (August 20, 2015) Historic and prehistoric
        human-driven extinctions have reshaped global mammal diversity patterns. Diversity and
        Distributions, 10.1111/ddi.12369</string>

    <string name="iucn_title">IUCN (International Union for Conservation of Nature)</string>

    <string name="arkive_title">ARKive</string>
    <string name="arkive_credit"></string>

    <string name="developer_title">Developers</string>
    <string name="developer_credit">Brenden Bernal, Michael Hartzell, Chandler Hayes, and Anthony
        De La Torre</string>

    <!-- Info Dialog-->
    <string name="info_dialog_title">For More Information</string>
    <string name="about_link1">Learn more about animals transporting nutrients</string>
    <string name="about_link2">Find more articles</string>
    <string name="info_link1"></string>
    <string name="info_link2">https://www.cdoughty.org/</string>
</resources>
