<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ecolocation.ecolocation.DetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_animal_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/animal_name"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textSize="40sp" />

            <ImageView
                android:id="@+id/pic_animal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar"
                android:layout_margin="10dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/txt_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="0dp"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/txt_wiki_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:text="@string/wikipedia_link"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorAccent" />

            <RelativeLayout
                android:id="@+id/scientific_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/txt_binomial_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/scientific_name"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_binomial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_binomial_title"
                    android:layout_marginLeft="10dp"
                    android:text="Panthera leo"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="italic" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/threat_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/endangered_level_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/end_lev_title"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_endangered_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/endangered_level_title"
                    android:layout_marginLeft="10dp"
                    android:text="Species Endangered Level"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/mass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/mass_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/mass_title"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_mass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mass_title"
                    android:layout_marginLeft="10dp"
                    android:text="Species Mass"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/range_map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/txt_range_map_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:text="range_map"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/img_range_map"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:adjustViewBounds="true"
                    android:paddingBottom="15dp"
                    android:src="@drawable/ic_launcher_background"
                    android:visibility="visible" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</RelativeLayout>
